# QuantumBosonicSteadyDensityMatrix

./: .gitignore  CMakeLists.txt  Git协作.md  Makefile  Python皮说明.md  README.md  requirements.txt  setup.py  开发准备.md
ImplementInstruction/: 密度矩阵.md  样例.md  求解方法.md  输入输出.md
bostix/: solver.py
bostix/matrix/: mapper.py  tensor.py
bostix/utils/: form.py  opr.py
include/: IMatrixMapper.h  MatrixMapper.h  complex.h  test.h
include/expression/: EpDeriver.h
include/python-utils/: utils.h
include/solver/: DPSolver.h  TDSolver.h
src/: main.cpp
src/cpp/: complex.cpp
src/cpp/Expression/: EpDeriver.cpp
src/cpp/solver/: DPSolver.cpp  TDSolver.cpp  TDSolver.cppunfinished
src/python/: py_wrapper.cpp
test/: bostixTest.ipynb  bostixTest_dev.ipynb  bostixTest_dev_linux.ipynb  test.py
test/.ipynb_checkpoints/: bostixTest-checkpoint.ipynb  bostixTest_dev-checkpoint.ipynb
